# collet-tokens

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  VISION.md  action.yml
.claude/skills/collet-tokens/: SKILL.md
.github/workflows/: validate.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: color.rs  issue.rs  lib.rs  parser.rs  resolver.rs  spacing.rs  types.rs  typography.rs  validator.rs
crates/output-android/: Cargo.toml
crates/output-android/src/: lib.rs
crates/output-css/: Cargo.toml
crates/output-css/src/: lib.rs
crates/output-ios/: Cargo.toml
crates/output-ios/src/: lib.rs
crates/output-tailwind/: Cargo.toml
crates/output-tailwind/src/: lib.rs
docs/: figma-integration.md  theme-registry.md  validation-roadmap.md
examples/: github-action-usage.yml
scripts/: figma-to-tokens.mjs
tests/fixtures/: invalid-contrast.yaml  valid-dtcg.tokens.json  valid-full.yaml  valid-minimal.yaml
